--- a/css/mycontact.css
+++ b/css/mycontact.css
@@ -7,19 +7,76 @@ body, html{
 	width:100%;
 }
 
+
+.ribbon-wrapper {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+  position: absolute;
+  top: -5px;
+  right: -3px;
+}
+
+.ribbon-development {
+  font: bold 12px Sans-Serif;
+  color: #333;
+  text-align: center;
+  text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform:    rotate(45deg);
+  -ms-transform:     rotate(45deg);
+  -o-transform:      rotate(45deg);
+  position: relative;
+  padding: 7px 7px 7px 20px;
+  left: 82px;
+  top: 49px;
+  width: 270px;
+  background-color: #BFDC7A;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45)); 
+  background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45); 
+  color: #6a6340;
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+  box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+}
+
+.ribbon-development:before, 
+.ribbon-development:after {
+  content: "";
+  border-top:   4px solid #6e8900;   
+  border-left:  4px solid transparent;
+  border-right: 4px solid transparent;
+  position:absolute;
+  bottom: -4px;
+}
+
+.ribbon-development:before {
+  left: 42px;
+}
+.ribbon-development:after {
+  right: 32px;
+}
+
 #container{
-	width:100%;
-	height:100%;
-	margin:auto;
-	overflow:auto;
+	margin: 10px;
+	border-radius: 10px;
+  	-webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.3);
+  	-moz-box-shadow:    0px 0px 8px rgba(0,0,0,0.3);
+  	box-shadow:         0px 0px 8px rgba(0,0,0,0.3);
+  	position: relative;
+  	z-index: 90;
 }
 
 #logo{
 	display:block;
 	margin:auto;
-	width:40%;
-        max-width: 100%;
+	max-width: 100%;
 }
+
+
 
 #header-text{
 	text-align:center;
